--- a/src/app/pages/practice-areas/practice-areas.html
+++ b/src/app/pages/practice-areas/practice-areas.html
@@ -1,5 +1,5 @@
 <app-hero-banner></app-hero-banner>
-<app-filter-tabs></app-filter-tabs>
+<!-- <app-filter-tabs></app-filter-tabs> -->
 <app-areas-grid></app-areas-grid>
 <app-stats-section></app-stats-section>
 <app-testimonial-quote></app-testimonial-quote>
