--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -17,7 +17,7 @@
           <a class="text-gray-400 hover:text-primary transition-colors" href="#"><span class="material-symbols-outlined">mail</span></a>
         </div>
       </div>
-      <div>
+      <!-- <div>
         <h4 class="text-sm font-bold uppercase tracking-wider text-[#0d121b] dark:text-white mb-6">Practice Areas</h4>
         <ul class="space-y-3 text-sm text-gray-500">
           <li><a class="hover:text-primary transition-colors" href="#">Corporate Law</a></li>
@@ -26,12 +26,12 @@
           <li><a class="hover:text-primary transition-colors" href="#">Real Estate</a></li>
           <li><a class="hover:text-primary transition-colors" href="#">Intellectual Property</a></li>
         </ul>
-      </div>
+      </div> -->
       <div>
         <h4 class="text-sm font-bold uppercase tracking-wider text-[#0d121b] dark:text-white mb-6">Quick Links</h4>
         <ul class="space-y-3 text-sm text-gray-500">
           <li><a class="hover:text-primary transition-colors" href="/about">About Us</a></li>
-          <li><a class="hover:text-primary transition-colors" href="/attorneys">Our Attorneys</a></li>
+          <li><a class="hover:text-primary transition-colors" href="/lawyers">Our Lawyers</a></li>
           <li><a class="hover:text-primary transition-colors" href="/contact">Contact</a></li>
         </ul>
       </div>
