--- a/src/app/components/practice-areas/filter-tabs/filter-tabs.html
+++ b/src/app/components/practice-areas/filter-tabs/filter-tabs.html
@@ -1,5 +1,5 @@
-<div class="w-full px-4 md:px-40 flex justify-center py-2 bg-background-light dark:bg-background-dark border-b border-[#cfd7e7] dark:border-gray-800">
-  <div class="layout-content-container flex flex-col max-w-[960px] flex-1 w-full">
+<div class="w-full flex justify-center py-2 bg-background-light dark:bg-background-dark border-b border-[#cfd7e7] dark:border-gray-800">
+  <div class="layout-content-container flex flex-col max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 flex-1 w-full">
     <div class="pb-1">
       <div class="flex overflow-x-auto gap-8 no-scrollbar">
         <a class="flex flex-col items-center justify-center border-b-[3px] border-b-primary text-[#0d121b] dark:text-white pb-[13px] pt-4 min-w-fit px-2" href="#">
