--- a/src/app/components/practice-areas/hero-banner/hero-banner.html
+++ b/src/app/components/practice-areas/hero-banner/hero-banner.html
@@ -1,5 +1,5 @@
-<div class="w-full px-4 md:px-40 flex flex-1 justify-center py-5">
-  <div class="layout-content-container flex flex-col max-w-[960px] flex-1 w-full">
+<div class="w-full flex flex-1 justify-center py-5">
+  <div class="layout-content-container flex flex-col max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 flex-1 w-full">
     <div class="@container">
       <div class="@[480px]:p-4">
         <div class="flex min-h-[420px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-8 relative overflow-hidden group shadow-lg"
